automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
         <div id="ingredients">
           {{#each ingredients}}
           <ul>
-            <li><input type="text" id="recipeIngredient"/><br></li>
-            <li><input type="text" id="recipeIngredient"/></br></li>
-            <li><input type="text" id="recipeIngredient"/></br></li>
-            <li><input type="text" id="recipeIngredient"/><br></li>
-            <li><input type="text" id="recipeIngredient"/><br></li>
+            <li><input type="text" name="ingredients"/><br></li>
+            <li><input type="text" name="ingredients"/></br></li>
+            <li><input type="text" name="ingredients"/></br></li>
+            <li><input type="text" name="ingredients"/><br></li>
+            <li><input type="text" name="ingredients"/><br></li>
          </ul>
          {{/each}}
        </div>
+       <input type="submit"/>
       </form>
     </main>
     <script src="node_modules/handlebars/dist/handlebars.min.js"></script>
