--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main id="main">
-      <form id ="recipe-form-template" onsubmit="createRecipe();return false">
+      <form id ="recipe-form" onsubmit="createRecipe();return false">
         Name: <input type="text" id="recipeName"/><br>
         Description: <input type="text" id="recipeDesc"/><br>
         Ingredients:
