--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <main id="main">
+      <script id="recipe-form-template" type="text/x-handlebars-template">
       <form id ="recipe-form" onsubmit="createRecipe();return false">
         Name: <input type="text" id="recipeName"/><br>
         Description: <input type="text" id="recipeDesc"/><br>
