automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
        </div>
        <input type="submit"/>
       </form>
+    </script>
     </main>
     <script src="node_modules/handlebars/dist/handlebars.min.js"></script>
     <script src="index.js"></script>
