automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <p><a href="#" onclick="displayEditForm()">Edit Recipe</a></p>
     </script>
     
-    <script id="recipe-details-template" type="text/x-handlebars-template">
+    <script id="recipe-details-partial" type="text/x-handlebars-template">
       <div>{{ recipeDesc }}</div>
       <ul>
        {{#each ingredients}}
